--- a/style.css
+++ b/style.css
@@ -33,3 +33,25 @@ body, html {
     color: #fff;
     font-family: IBM Plex Mono;
 }
+
+
+/* ===============================ABOUT======================================= */
+
+.container h2 {
+    text-align: center;
+}
+
+.columm {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.wrapper img { 
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
